--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Carta Presentacion</string>
+    <string name="user_name">Victor Chicas</string>
+    <string name="user_nickname">@Vixtor61</string>
 </resources>
